# FormuLite

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  examples.py  gen_ref_pages.py  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai-integration/: index.html
ai-integration/llms-txt/: index.html
ai-integration/mcp/: index.html
changelog/: index.html
contributing/: index.html
docs/: getting-started.md  index.md
docs/ai-integration/: index.md  llms-txt.md  mcp.md
docs/modules/: fxdate.md  fxexcel.md  fxnumeric.md  fxpython.md  fxstring.md  fxvba.md  index.md
examples/: example_grammar.py  example_mcp_client.py  example_names_corrector.py  examples.py  examples_fxPython.py
formulite/: __init__.py
formulite/fxDate/: README.md  __init__.py  date_convertions.py  date_evaluations.py  date_operations.py  date_sys.py
formulite/fxExcel/: README.md
formulite/fxNumeric/: README.md  arithmetic_functions.py  calculator_functions.py  numeric_convertions.py  numeric_operations.py  statistics_functions.py
formulite/fxPython/: README.md  __init__.py  py_convertions.py  py_itertools.py  py_operations.py  py_tools.py
formulite/fxString/: README string_similarity.md  README.md  README_string_spanish.md  USE_CASES.md  USE_CASES_EN.md  __init__.py  example_grammar.py  example_names_corrector.py  string_convertions.py  string_evaluations.py  string_format.py  string_grammar.py  string_operations.py  string_similarity.py  string_spellcheck.py
formulite/fxVBA/: README.md
fxDate/: date_convertions.py  date_excel.py
fxNumeric/: __init__.py  numeric_arithmetic.py  numeric_finance.py  numeric_statistics.py  numeric_trigonometry.py
fxPython/: py_classes.py  py_tools.py
fxString/: __init__.py  string_evaluations.py  string_format.py  string_operations.py  string_similarity.py  string_spanish.py  string_validations.py
getting-started/: index.html
modules/: index.html
modules/fxdate/: index.html
modules/fxexcel/: index.html
modules/fxnumeric/: index.html
modules/fxpython/: index.html
modules/fxstring/: index.html
modules/fxvba/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/fxDate/date_convertions/: index.html
reference/fxDate/date_evaluations/: index.html
reference/fxDate/date_operations/: index.html
reference/fxDate/date_sys/: index.html
reference/fxExcel/date_formulas/: index.html
shortfx/: __init__.py  _loader.py  _validators.py  mcp_server.py  registry.py  semantic_search.py
shortfx/fxDate/: README.md  __init__.py  date_convertions.py  date_evaluations.py  date_operations.py  date_sys.py
shortfx/fxExcel/: README.md  __init__.py  database_formulas.py  date_formulas.py  engineering_formulas.py  financial_formulas.py  information_formulas.py  logic_formulas.py  lookup_formulas.py  math_formulas.py  statistic_formulas.py  text_formulas.py
shortfx/fxNumeric/: README.md  __init__.py  arithmetic_functions.py  calculator_functions.py  complex_functions.py  conformal_functions.py  constants_functions.py  conversion_functions.py  coordinate_systems_functions.py  curves_functions.py  distribution_functions.py  finance_functions.py  finite_differences_functions.py  format_functions.py  geometry_functions.py  inequalities_functions.py  interpolation_functions.py  mechanics_functions.py  number_theory_functions.py  numerical_methods_functions.py  polynomial_functions.py  probability_extra_functions.py  random_functions.py  rounding_functions.py  series_functions.py  special_functions.py  statistics_functions.py  tensor_functions.py  transform_functions.py  trigonometry_functions.py  vector_analysis_functions.py
shortfx/fxPython/: README.md  __init__.py  py_convertions.py  py_itertools.py  py_logic.py  py_operations.py  py_tools.py
shortfx/fxString/: README.md  README_string_spanish.md  USE_CASES.md  USE_CASES_EN.md  __init__.py  string_caseconv.py  string_compression.py  string_convertions.py  string_encoding.py  string_evaluations.py  string_format.py  string_hashing.py  string_operations.py  string_regex.py  string_similarity.py  string_spanish.py  string_spellcheck.py  string_validations.py
shortfx/fxVBA/: README.md  __init__.py  array_functions.py  conversion_functions.py  date_functions.py  financial_functions.py  format_functions.py  logic_functions.py  math_functions.py  misc_functions.py  string_functions.py  system_functions.py
shortfx/mcp/: README.md  __init__.py  __main__.py  mcp.json  server.py
tests/: test_arithmetic_functions_cov.py  test_arithmetic_functions_deep.py  test_calculator_functions_cov.py  test_complex_functions_cov.py  test_conformal_functions_cov.py  test_constants_functions_cov.py  test_conversion_functions_cov.py  test_conversion_functions_deep.py  test_coordinate_systems_functions_cov.py  test_curves_functions_cov.py  test_database_formulas_cov.py  test_database_formulas_deep.py  test_date_convertions_cov.py  test_date_convertions_deep.py  test_date_evaluations_cov.py  test_date_evaluations_deep.py  test_date_formulas_cov.py  test_date_operations_cov.py  test_date_operations_deep.py  test_date_sys_cov.py  test_date_sys_deep.py  test_distribution_functions_cov.py  test_distribution_functions_deep.py  test_finance_functions_cov.py  test_finance_functions_deep.py  test_financial_formulas_cov.py  test_financial_formulas_deep.py  test_finite_differences_functions_cov.py  test_fxDate_coverage.py  test_fxDate_date_convertions.py  test_fxDate_date_evaluations.py  test_fxDate_date_operations.py  test_fxDate_date_sys.py  test_fxExcel_coverage.py  test_fxExcel_engineering_formulas.py  test_fxExcel_formulas.py  test_fxExcel_lookup_formulas.py  test_fxExcel_math_formulas.py  test_fxExcel_statistic_formulas.py  test_fxExcel_text_formulas.py  (+108 more)
(+66 files in other folders)
